small bug w about us photos

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ nav ul li a {
 
 .member img {
     width: 100%;
-    max-width: 400pxo;
+    max-width: 400px;
     height: auto;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
 }
